app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsacad-app
  labels:
    app: devopsacad-app
spec:
  selector:
    matchLabels:
      app: devopsacad-app
  replicas: 1
  template:
    metadata: 
      labels:
        app: devopsacad-app
    spec:
      containers:
      - name: devopsacad-app
        image: 392102158411.dkr.ecr.eu-west-2.amazonaws.com/devopsacad-d-image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devopsacad-app
spec:
  selector:
    app: devopsacad-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
