alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:442042522885:certificate/59d8122f-0538-4749-be86-9f7aeb8dda80,arn:aws:acm:eu-west-2:442042522885:certificate/9067718a-f937-44fe-9bd9-0b62ad9ff251
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: my-alb
spec:
  ingressClassName: alb
  rules:
  - host: online-boutique.classof25.online
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
